<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/identification"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrnd"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/identifiant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/app_id"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/motPasse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="55dp"
        android:ems="10"
        android:hint="@string/app_mdp"
        android:inputType="numberPassword"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="-1dp" />

    <Button
        android:id="@+id/btnSeConnecter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="143dp"
        android:layout_marginLeft="143dp"
        android:layout_marginTop="124dp"
        android:text="@string/app_se_connecter" />

</RelativeLayout>