<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrnd"

    tools:context=".MenuActivity">

    <Button
        android:id="@+id/btnSeDeconnecter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="182dp"
        android:layout_marginEnd="144dp"
        android:layout_marginRight="144dp"
        android:background="@color/colorAccent"
        android:text="@string/app_se_deconnecter" />

    <Button
        android:id="@+id/monEnvoi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="58dp"
        android:text="@string/app_envoi"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/monRetrait"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="104dp"
        android:text="@string/app_retrait"
        android:layout_alignParentLeft="true" />
</RelativeLayout>